<resources>
    <string name="app_name">Mapapers</string>
    <string name="google_maps_api_key">__REDACTED__</string>
    <string name="processing">Processing...</string>
    <string name="loading">Loading...</string>
    <string name="styles">Styles</string>
    <string name="save">Save</string>
    <string name="search_places">Search places</string>
    <string name="loading_error">Couldn\'t load map styles</string>
    <string name="restart">Restart</string>
    <string name="done">Done!</string>
    <string name="set">Set</string>
    <string name="made_with_mapapers">Made with Mapapers!</string>
    <string name="water">Water</string>
    <string name="roads">Roads</string>
    <string name="city">City</string>
    <string name="land">Land</string>
    <string name="customize">Customize</string>
    <string name="im_feeling_lucky">I\'m feeling lucky</string>
    <string name="fetching_location">Fetching location...</string>
</resources>